manifests/ingress/rancher-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress  
  namespace: cattle-system
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "hwseo-site-clusterissuer"
spec:
  ingressClassName: hwseo-ingress
  rules:
  - host: rancher.hwseo.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher
            port:
              number: 80
  tls:
  - hosts:
    - rancher.hwseo.site
    secretName: hwseo-site-tls
